cmake_minimum_required(VERSION 3.16)

# Set project name and version
project(SpinningCube VERSION 1.0 LANGUAGES CXX)

# Set C++ standard
set(CMAKE_CXX_STANDARD 21)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Define source files
# set(SOURCES
#     src/main.cpp
#     src/other_file.cpp
#     # Add more source files here
# )
#
# # Define header files (optional)
# set(HEADERS
#     include/my_header.hpp
#     # Add more headers here
# )
#
# # Include directories
# include_directories(${CMAKE_SOURCE_DIR}/include)
#
# # Create executable
# add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
#
# # Optionally link libraries
# # target_link_libraries(${PROJECT_NAME} PRIVATE some_library)
#
# # Installation instructions
# install(TARGETS ${PROJECT_NAME} DESTINATION bin)
# install(DIRECTORY include/ DESTINATION include)

# Enable testing (optional)
# include(CTest)
# enable_testing()
